--- a/War of Tanks/.recommenders/caches/identified-project-coordinates.json
+++ b/War of Tanks/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\ADMIN\\Documents\\War of Tanks\\tankLib\\core","type":"PROJECT","hints":{"PROJECT_NAME":"wartank-core"}},"ABSENT"]]
